k3s/homer/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: dashboard
  labels:
    app: homer
spec:
  replicas: 1
  strategy:
    type: Recreate # Better for SQLite/Single file config
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
            - mountPath: /www/assets
              name: assets-vol
      volumes:
        - name: assets-vol
          hostPath:
            path: /mnt/data/k3s-pvc/homer
            type: Directory
