k3s/homer/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-svc
  namespace: dashboard
spec:
  selector:
    app: homer
  ports:
    - name: http
      port: 80
      targetPort: 8080
