k3s/homer/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: dashboard
spec:
  rules:
    - host: homer.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer-svc
                port:
                  number: 80
    - host: homer.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer-svc
                port:
                  number: 80
